将所有get(0)更改为JDK21新方法getFirst